--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <link href="css/templatemo-topic-listing.css" rel="stylesheet">   
 
         <link rel="stylesheet" href="css/style.css">
-        <!-- <link rel="stylesheet" href="css/style.min.css"> -->
+        <link rel="stylesheet" href="css/style.min.css">
         <!-- <link rel="stylesheet" href="css/style.scss"> -->
         <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css"
@@ -762,7 +762,7 @@
               </div>
 
 
-            <section class="faq-section section-padding" id="section_4">
+            <!-- <section class="faq-section section-padding" id="section_4">
                 <div class="container">
                     <div class="row">
 
@@ -819,6 +819,63 @@
                                         </div>
                                     </div>
                                 </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </section> -->
+
+            <section class="section-padding section-bg">
+                <div class="container">
+                    <div class="row">
+
+                        <div class="col-lg-12 col-12">
+                            <h3 class="mb-4">Register Today</h3>
+                        </div>
+
+                        <div class="col-lg-6 col-md-6 col-12 mt-3 mb-4 mb-lg-0">
+                            <div class="custom-block bg-white shadow-lg">
+                                <a href="#">
+                                    <div class="d-flex">
+                                        <div>
+                                            <h5 class="mb-2">Tutor Register</h5>
+
+                                            <p class="mb-0">You are passionate in a spcific topic <br>Share your knowledge to others </p>
+                                        </div>
+
+                                        <span class="badge bg-finance rounded-pill ms-auto">30</span>
+                                    </div>
+
+                                    <img src="images/topics/undraw_Finance_re_gnv2.png" class="custom-block-image img-fluid" alt="">
+                                </a>
+                                <div class="row ">
+                                <button class="btn" type="submit" class="form-control">Reagister</button>
+
+                            </div>
+                            </div>
+                            
+                        </div>
+
+                        <div class="col-lg-6 col-md-6 col-12 mt-lg-3">
+                            <div class="custom-block bg-white shadow-lg">
+                                <a href="#">
+                                    <div class="d-flex">
+                                        <div>
+                                            <h5 class="mb-2">Student Register</h5>
+
+                                            <p class="mb-0">You are really want to Learn and grow your self </p>
+                                        </div>
+
+                                        <span class="badge bg-finance rounded-pill ms-auto">30</span>
+                                    </div>
+
+                                    <img src="images/topics/undraw_Finance_re_gnv2.png" class="custom-block-image img-fluid" alt="">
+                                </a>
+                                <div class="row ">
+                                <button class="btn" type="submit" class="form-control">Reagister</button>
+
+                            </div>
                             </div>
                         </div>
 
